translation-tool/inputs/source_meta/objects/HSvc_DETSRelationGroup__c.object
<CustomObject>
    <description>This object maintains metadata of DETS Group information.</description>
    <fields>
        <fullName>HSvc_DETSDEPARTMENT__c</fullName>
        <label>DETS Department</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_DETSGROUP__c</fullName>
        <label>DETSGROUP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_DETSHNSRELGRPID__c</fullName>
        <externalId>true</externalId>
        <label>Relation Group Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>DETS Relation Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>HSvc_DETSDEPARTMENT__c</columns>
        <columns>HSvc_DETSGROUP__c</columns>
        <columns>HSvc_DETSHNSRELGRPID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DETSGROUP</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DETS Relation Group</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>